💄 fix dark mode switcher mobile color

--- a/src/components/Header/ThemeSwitcher/style.scss
+++ b/src/components/Header/ThemeSwitcher/style.scss
@@ -108,10 +108,6 @@ input:checked + .slider:before {
   }
   
   .mobileSwitcherIcon {
-    color: $lightFont6Color;
     font-size: 20px;
-    .dark & {
-      color: $darkFont6Color;
-    }
   }
 }
